solve the problem overflow

--- a/style/style.css
+++ b/style/style.css
@@ -16,6 +16,7 @@
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
+    overflow: auto;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 header #container{
@@ -150,6 +151,7 @@ ul.sidebar li{
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
+    border:#057ad3 2px solid ;
 }
 .about_image img{
     width: 300px;
@@ -205,7 +207,6 @@ ul.sidebar li{
     }
     .about_title{
         font-size: var(--big_font);
-        /* display: none; */
     }
     .about {
         text-align: center;
